  (Florian Angeletti, report by Leo White, review by Thomas Refis)

- #8874: add tests for typechecking error messages and pack them into
  pretty-printing boxes.
  (Oxana Kostikova, review by Gabriel Scherer)

- #8914: clarify the warning on unboxable types used in external primitives (61)
  (Gabriel Scherer, review by Florian Angeletti, report on the Discourse forum)

### Bug fixes:

- #7925, #8611: fix error highlighting for exceptionally
  long toplevel phrases
  (Kyle Miller, reported by Armaël Guéneau, review by Armaël Guéneau
   and Nicolás Ojeda Bär)

- #8622: Don't generate #! headers over 127 characters.
  (David Allsopp, review by Xavier Leroy and Stephen Dolan)

- #8715: minor bugfixes in CamlinternalFormat; removes the unused
  and misleading function CamlinternalFormat.string_of_formatting_gen
  (Gabriel Scherer and Florian Angeletti,
   review by Florian Angeletti and Gabriel Radanne)

- #8855, #8858: Links for tools not created when installing with
  --disable-installing-byecode-programs (e.g. ocamldep.opt installed, but
  ocamldep link not created)
  (David Allsopp, report by Thomas Leonard)

- #8875: fix missing newlines in the output from MSVC invocation.
  (Nicolás Ojeda Bär, review by Gabriel Scherer)

- #8921, #8924: Fix stack overflow with Flambda
  (Vincent Laviron, review by Pierre Chambart and Leo White,
   report by Aleksandr Kuzmenko)

OCaml 4.09 maintenance branch:
------------------------------

- #8953, #8954: Fix error submessages in the toplevel: do not display
  dummy locations
  (Armaël Guéneau, review by Gabriel Scherer)

- #8965, #8979: Alpine build failure caused by check-parser-uptodate-or-warn.sh
  (Gabriel Scherer and David Allsopp, report by Anton Kochkov)

OCaml 4.09.0 (19 September 2019):
---------------------------------

### Runtime system:

* #1725, #2279: Deprecate Obj.set_tag and Obj.truncate
  (Stephen Dolan, review by Gabriel Scherer, Damien Doligez and Xavier Leroy)
