@@ -1,40 +1,0 @@
-tests/basic
-tests/basic-float
-tests/basic-io
-tests/basic-io-2
-tests/basic-manyargs
-tests/basic-modules
-tests/basic-more
-tests/basic-multdef
-tests/basic-private
-tests/typing-extension-constructor
-tests/typing-extensions
-tests/typing-fstclassmod
-tests/typing-gadts
-tests/typing-immediate
-tests/typing-implicit_unpack
-tests/typing-labels
-tests/typing-misc
-tests/typing-misc-bugs
-tests/typing-missing-cmi
-tests/typing-modules
-tests/typing-modules-bugs
-tests/typing-objects
-tests/typing-objects-bugs
-tests/typing-poly
-tests/typing-poly-bugs
-tests/typing-polyvariants-bugs
-tests/typing-polyvariants-bugs-2
-tests/typing-private
-tests/typing-private-bugs
-tests/typing-recmod
-tests/typing-recordarg
-tests/typing-rectypes-bugs
-tests/typing-safe-linking
-tests/typing-short-paths
-tests/typing-signatures
-tests/typing-sigsubst
-tests/typing-typeparam
-tests/typing-unboxed
-tests/typing-warnings
-tests/warnings
